--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,80 @@
 
+@Book{		  gamut1991vol1,
+  author	= {Gamut, L. T. F.},
+  pages		= {296},
+  publisher	= {University of Chicago Press},
+  title		= {Logic, Language, and Meaning},
+  volume	= {1},
+  year		= {1991}
+}
+
+@Book{		  gamut1991vol2,
+  author	= {Gamut, L. T. F.},
+  pages		= {349},
+  title		= {Logic, Language, and Meaning},
+  volume	= {2},
+  year		= {1991}
+}
+
+@Book{		  lappin2015handbook,
+  editor	= {Lappin, Shalom and Fox, Chris},
+  pages		= {776},
+  publisher	= {John Wiley and Sons},
+  title		= {The Handbook of Contemporary Semantic Theory},
+  year		= {2015}
+}
+
+@InProceedings{	  percus2003lf,
+  author	= {Percus, Orin and Sauerland, Uli},
+  booktitle	= {Sinn und Bedeutung},
+  title		= {On the LFs of attitude reports},
+  volume	= {7},
+  year		= {2003}
+}
+
+@Article{	  charlow2014bound,
+  author	= {Charlow, Simon and Sharvit, Yael},
+  journal	= {Semantics and Pragmatics},
+  title		= {Bound de re pronouns and the LFs of attitude reports},
+  volume	= {7},
+  year		= {2014}
+}
+
+@InBook{	  yalcin2018semantics,
+  author	= {Yalcin, Seth},
+  booktitle	= {The Science of Meaning},
+  editor	= {Ball, Derek and Rabern, Brian},
+  publisher	= {Oxford University Press},
+  title		= {Semantics as Model-Based Science},
+  year		= {2018}
+}
+
+@Book{		  ball2018meaning,
+  editor	= {Ball, Derek and Rabern, Brian},
+  publisher	= {Oxford University Press},
+  title		= {The Science of Meaning},
+  year		= {2018}
+}
+
+@Article{	  lederman2021attitude,
+  author	= {Lederman, Harvey},
+  journal	= {Semantics and Pragmatics},
+  number	= {1},
+  title		= {Fine-grained semantics for attitude reports},
+  volume	= {14},
+  year		= {2021}
+}
+
+@Article{	  schwarz2012situation,
+  author	= {Schwarz, Florian},
+  journal	= {Natural Language Semantics},
+  number	= {4},
+  pages		= {431--475},
+  title		= {Situation pronouns in determiner phrases},
+  volume	= {20},
+  year		= {2012}
+}
+
 @Article{	  flaherty2021homesign,
   author	= {Flaherty, Molly and Hunsicker, Dea and Goldin-Meadow,
 		  Susan},
