--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,19 @@
 
+@Book{		  bird2009python,
+  author	= {Bird, Steven and Klein, Ewan and Loper, Edward},
+  pages		= {512},
+  publisher	= {O'Reilly Media},
+  title		= {Natural Language Processing with Python},
+  year		= {2009}
+}
+
+@Book{		  hammond2020python,
+  author	= {Hammond, Michael},
+  publisher	= {Cambridge University Press},
+  title		= {Python for Linguists},
+  year		= {2020}
+}
+
 @Book{		  gamut1991vol1,
   author	= {Gamut, L. T. F.},
   pages		= {296},
