result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,16 @@
+@Book{Greco2020Copular,
+author = {Greco, Matteo and Lorusso, Paolo and Chesi, Cristiano and Moro, Andrea}, 
+title = {Asymmetries in nominal copular sentences: Psycholinguistic evidence in favor of the raising analysis}, 
+volume = {245}, 
+pages = {102926}, 
+editor = {}, 
+publisher = {Elsevier BV}, 
+address = {}, 
+year = {2020}, 
+abstract = {}, 
+keywords = {Copula; Copular senteces; neurolinguistics}}
+
+
 @phdthesis{Hashimoto2015Experiencing-in,
 author = {Hashimoto, Masashi}, 
 title = {Experiencing in Japanese: The Experiencer Restriction across Clausal Types}, 
