--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,24 @@
 
+@Article{	  cox2020why,
+  author	= {Cox, Ryan},
+  journal	= {Lingua},
+  pages		= {102884},
+  title		= {Bromberger on the syntax of why-interrogatives},
+  volume	= {247},
+  year		= {2020}
+}
+
+@Book{		  greco2020copular,
+  author	= {Greco, Matteo and Lorusso, Paolo and Chesi, Cristiano and
+		  Moro, Andrea},
+  pages		= {102926},
+  publisher	= {Elsevier BV},
+  title		= {Asymmetries in nominal copular sentences: Psycholinguistic
+		  evidence in favor of the raising analysis},
+  volume	= {245},
+  year		= {2020}
+}
+
 @Book{		  bird2009python,
   author	= {Bird, Steven and Klein, Ewan and Loper, Edward},
   pages		= {512},
