--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,35 @@
 
+@Article{	  hawke2021,
+  author	= {Hawke, Peter and Steinert-Threlkeld, Shane},
+  journal	= {Linguistics and Philosophy},
+  number	= {2},
+  pages		= {475--511},
+  title		= {Semantic expressivism for epistemic modals},
+  volume	= {44},
+  year		= {2021}
+}
+
+@Article{	  theiler2021denn,
+  author	= {Theiler, Nadine},
+  journal	= {Linguistics and Philosophy},
+  number	= {2},
+  pages		= {323--362},
+  title		= {Denn as a highlighting-sensitive particle},
+  volume	= {44},
+  year		= {2021}
+}
+
+@Article{	  romero2021many,
+  author	= {Romero, Maribel},
+  journal	= {Linguistics and Philosophy},
+  number	= {2},
+  pages		= {281--321},
+  title		= {The many readings of many: POS in the reverse proportional
+		  reading},
+  volume	= {44},
+  year		= {2021}
+}
+
 @Article{	  cox2020why,
   author	= {Cox, Ryan},
   journal	= {Lingua},
