--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,19 @@
 
+@Article{	  simpson2021nominal,
+  author	= {Simpson, Andrew},
+  journal	= {Natural Language & Linguistic Theory},
+  title		= {Revisiting the structure of nominals in Japanese and
+		  Korean},
+  year		= {2021}
+}
+
+@Article{	  oda2021free,
+  author	= {Oda, Hiromune},
+  journal	= {Natural Language Semantics},
+  title		= {Japanese free choice items as unconditionals},
+  year		= {2021}
+}
+
 @Article{	  hawke2021,
   author	= {Hawke, Peter and Steinert-Threlkeld, Shane},
   journal	= {Linguistics and Philosophy},
