--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,7 +1,7 @@
 
 @Article{	  simpson2021nominal,
   author	= {Simpson, Andrew},
-  journal	= {Natural Language & Linguistic Theory},
+  journal	= {Natural Language \& Linguistic Theory},
   title		= {Revisiting the structure of nominals in Japanese and
 		  Korean},
   year		= {2021}
