--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,30 @@
 
+@Book{		  berwick2016only,
+  address	= {Cambridge, Massachusetts},
+  author	= {Berwick, Robert C. and Chomsky, Noam},
+  publisher	= {MIT Press},
+  title		= {Why only us: language and evolution},
+  year		= {2016}
+}
+
+@Article{	  mendivil-giro2020defence,
+  author	= {Mend{\'i}vil-Gir{\'o}, Jos{\'e}-Luis},
+  journal	= {Biolinguistics},
+  pages		= {145--153},
+  title		= {In Defence of FLB/FLN: A Reply to Wacewicz et al. (2020)},
+  volume	= {14},
+  year		= {2020}
+}
+
+@Article{	  leivada2020poisonous,
+  author	= {Leivada, Evelina and Barcel{\'o}-Coblijn, Llu{\'i}s},
+  journal	= {Biolinguistics},
+  pages		= {51--58},
+  title		= {Why Don't Languages Grammaticalize [$\pm$poisonous]?},
+  volume	= {14},
+  year		= {2020}
+}
+
 @Article{	  simpson2021nominal,
   author	= {Simpson, Andrew},
   journal	= {Natural Language \& Linguistic Theory},
