--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,34 @@
 
+@Article{	  panagiotidis2020roots,
+  author	= {Panagiotidis, Phoevos},
+  journal	= {Lexical Issues in the Architecture of the Language
+		  Faculty},
+  number	= {1},
+  pages		= {56--83},
+  title		= {On the nature of roots},
+  volume	= {2},
+  year		= {2020}
+}
+
+@Article{	  sigurdsson2020evolution,
+  author	= {Sigurðsson, Halld{\'o}r {\'A}rmann},
+  journal	= {Evolutionary linguistic theory},
+  number	= {1},
+  pages		= {5--29},
+  title		= {Universality and variation in language},
+  volume	= {2},
+  year		= {2020}
+}
+
+@Article{	  graffi2019origin,
+  author	= {Graffi, Giorgio},
+  journal	= {Evolutionary Linguistic Theory},
+  pages		= {6--23},
+  title		= {Origin of language and origin of languages},
+  volume	= {1},
+  year		= {2019}
+}
+
 @Book{		  berwick2016only,
   address	= {Cambridge, Massachusetts},
   author	= {Berwick, Robert C. and Chomsky, Noam},
