--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,50 @@
 
+@Article{	  sigurthson2004person,
+  author	= {Sigurðsson, Halld{\'o}r {\'A}rmann},
+  journal	= {Rivista di Linguistica},
+  number	= {1},
+  pages		= {219--251},
+  title		= {The syntax of Person, Tense and Speech features},
+  volume	= {16},
+  year		= {2004}
+}
+
+@Article{	  gallistel2011prelinguistic,
+  author	= {Gallistel, C. R.},
+  journal	= {Language Learning and Development},
+  number	= {4},
+  pages		= {253--262},
+  title		= {Prelinguistic Thought},
+  volume	= {7},
+  year		= {2011}
+}
+
+@Article{	  burton-roberts2011phonology,
+  author	= {Burton-Roberts, Noel},
+  journal	= {Lingua},
+  number	= {14},
+  pages		= {2089--2102},
+  title		= {On the grounding of syntax and the role of phonology in
+		  human cognition},
+  volume	= {121},
+  year		= {2011}
+}
+
+@Book{		  banfield2014unspeakable,
+  author	= {Banfield, Ann},
+  pages		= {354},
+  publisher	= {Routledge},
+  title		= {Unspeakable Sentences},
+  year		= {2014}
+}
+
+@PhDThesis{	  conrod2019pronouns,
+  author	= {Conrod, Kirby},
+  school	= {University of Washington},
+  title		= {Pronouns Raising and Emerging},
+  year		= {2019}
+}
+
 @Article{	  panagiotidis2020roots,
   author	= {Panagiotidis, Phoevos},
   journal	= {Lexical Issues in the Architecture of the Language
