--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,54 @@
 
+@Article{	  richards2001lexical,
+  author	= {Richards, Norvin},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {183--192},
+  title		= {An Idiomatic Argument for Lexical Decomposition},
+  volume	= {32},
+  year		= {2001}
+}
+
+@Article{	  richards1998mininal,
+  author	= {Richards, Norvin},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {599--629},
+  title		= {The Principle of Minimal Compliance},
+  volume	= {29},
+  year		= {1998}
+}
+
+@Article{	  corbett1979agreement,
+  author	= {Corbett, Greville G.},
+  journal	= {Journal of Linguistics},
+  number	= {2},
+  pages		= {203--224},
+  title		= {The agreement hierarchy},
+  volume	= {15},
+  year		= {1979}
+}
+
+@Article{	  rackowski2005phase,
+  author	= {Rackowski, Andrea and Richards, Norvin},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {565--599},
+  title		= {Phase Edge and Extraction: A Tagalog Case Study},
+  volume	= {36},
+  year		= {2005}
+}
+
+@Article{	  richards2004ban,
+  author	= {Richards, Norvin},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {453--463},
+  title		= {Against Bans on Lowering},
+  volume	= {35},
+  year		= {2004}
+}
+
 @Article{	  sigurthson2004person,
   author	= {Sigurðsson, Halld{\'o}r {\'A}rmann},
   journal	= {Rivista di Linguistica},
