--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,24 @@
 
+@Article{	  bronnikov2008clarity,
+  author	= {Bronnikov, George},
+  journal	= {Semantics and Linguistic Theory},
+  pages		= {144},
+  title		= {The Paradox of Clarity: Defending the Missing Inference
+		  Theory},
+  volume	= {18},
+  year		= {2008}
+}
+
+@Article{	  barker2009skepticism,
+  author	= {Barker, Chris},
+  journal	= {Mind \& Language},
+  number	= {3},
+  pages		= {253--273},
+  title		= {Clarity and the Grammar of Skepticism},
+  volume	= {24},
+  year		= {2009}
+}
+
 @Article{	  richards2001lexical,
   author	= {Richards, Norvin},
   journal	= {Linguistic Inquiry},
