--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  vonfintel2021strong,
+  author	= {von Fintel, Kai and Gillies, Anthony S.},
+  journal	= {Natural Language Semantics},
+  number	= {1},
+  pages		= {91--113},
+  title		= {Still going strong},
+  volume	= {29},
+  year		= {2021}
+}
+
 @Article{	  bronnikov2008clarity,
   author	= {Bronnikov, George},
   journal	= {Semantics and Linguistic Theory},
