--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Book{		  chaves2020unbounded,
+  address	= {New York},
+  author	= {Chaves, Rui P. and Putnam, Michael T.},
+  pages		= {pages cm},
+  publisher	= {Oxford University Press},
+  title		= {Unbounded dependency constructions},
+  year		= {2020}
+}
+
 @Article{	  vonfintel2021strong,
   author	= {von Fintel, Kai and Gillies, Anthony S.},
   journal	= {Natural Language Semantics},
