--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  nunes2021edge,
+  author	= {Nunes, Jairo},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {On the locus and licensing of edge features},
+  volume	= {6},
+  year		= {2021}
+}
+
 @Book{		  chaves2020unbounded,
   address	= {New York},
   author	= {Chaves, Rui P. and Putnam, Michael T.},
