--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  deal2016person,
+  author	= {Deal, Amy Rose},
+  journal	= {Journal of Linguistics},
+  number	= {3},
+  pages		= {533--564},
+  title		= {Person-based split ergativity in Nez Perce is syntactic},
+  volume	= {52},
+  year		= {2016}
+}
+
 @Article{	  nunes2021edge,
   author	= {Nunes, Jairo},
   journal	= {Glossa: a journal of general linguistics},
