--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,72 @@
 
+@Article{	  newmeyer2002optimality,
+  author	= {Newmeyer, Frederick J.},
+  journal	= {Natural Language \& Linguistic Theory},
+  number	= {1},
+  pages		= {43--80},
+  title		= {Optimality and functionality: a critique of
+		  functionally-based optimality-theoretic syntax},
+  volume	= {20},
+  year		= {2002}
+}
+
+@Article{	  haspelmath2008iconicity,
+  author	= {Haspelmath, Martin},
+  journal	= {Cognitive Linguistics},
+  number	= {1},
+  pages		= {1--33},
+  title		= {Frequency vs. iconicity in explaining grammatical
+		  asymmetries},
+  volume	= {19},
+  year		= {2008}
+}
+
+@PhDThesis{	  grano2006pronoun,
+  author	= {Grano, Thomas},
+  school	= {Stanford University},
+  title		= {`Me and her' meets `he and I': Case, person, and linear
+		  order in English coordinated pronouns},
+  year		= {2006}
+}
+
+@Article{	  grimshaw1986mirror,
+  author	= {Grimshaw, Jane},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {745--749},
+  title		= {A Morphosyntactic Explanation for the Mirror Principle},
+  volume	= {17},
+  year		= {1986}
+}
+
+@Article{	  speas1991mirror,
+  author	= {Speas, Margaret},
+  journal	= {Lingua},
+  pages		= {181--214},
+  title		= {Functional heads and the mirror principle},
+  volume	= {84},
+  year		= {1991}
+}
+
+@Article{	  baker1985mirror,
+  author	= {Baker, Mark C.},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {373--415},
+  title		= {The Mirror Principle and Morphosyntactic Explanation},
+  volume	= {16},
+  year		= {1985}
+}
+
+@Article{	  fujita2021evolution,
+  author	= {Fujita, Haruka and Fujita, Koji},
+  journal	= {Primates},
+  title		= {Human language evolution: a view from theoretical
+		  linguistics on how syntax and the lexicon first came into
+		  being.},
+  year		= {2021}
+}
+
 @Article{	  deal2016person,
   author	= {Deal, Amy Rose},
   journal	= {Journal of Linguistics},
