--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,21 @@
 
+@Article{	  aslin2021word,
+  author	= {Aslin, Richard N. and Wang, Alice F.},
+  journal	= {Cognition},
+  title		= {A distributional perspective on the gavagai problem in
+		  early word learning},
+  year		= {2021}
+}
+
+@Book{		  wechsler2015word,
+  address	= {New York, NY},
+  author	= {Wechsler, Stephen},
+  pages		= {353},
+  publisher	= {Oxford University Press},
+  title		= {Word meaning and syntax: approaches to the interface},
+  year		= {2015}
+}
+
 @Article{	  newmeyer2002optimality,
   author	= {Newmeyer, Frederick J.},
   journal	= {Natural Language \& Linguistic Theory},
