--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@PhDThesis{	  oltra-massuet1999theme,
+  author	= {Oltra-Massuet, Isabel},
+  title		= {On The Notion of Theme Vowel: A New Approach to Catalan
+		  Verbal Morphology},
+  year		= {1999}
+}
+
 @Article{	  aslin2021word,
   author	= {Aslin, Richard N. and Wang, Alice F.},
   journal	= {Cognition},
