result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,16 @@
+@InBook{Gumiel-Molina2020Edad,
+author = {Gumiel-Molina, Silvia and Moreno-Quibén, Norberto and Pérez-Jiménez, Isabel}, 
+title = {Variaciación dialectal en las oraciones copulativas en español: los adjetivos de edad y tamaño}, 
+booktitle = {Las palabras como unidades lingüísticas}, 
+editor = {Hernández, Esther and Martín Butragueño, Pedro}, 
+publisher = {CISC-El Colegio de México}, 
+address = {México; Madrid}, 
+pages = {219-244}, 
+year = {2020}, 
+abstract = {}, 
+keywords = {copula; copulative sentences; predicate; degree; adjective}}
+
+
 @Book{Greco2020Copular,
 author = {Greco, Matteo and Lorusso, Paolo and Chesi, Cristiano and Moro, Andrea}, 
 title = {Asymmetries in nominal copular sentences: Psycholinguistic evidence in favor of the raising analysis}, 
