--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,39 @@
 
+@Article{	  pozniak2021gender,
+  author	= {Pozniak, C{\'e}line and Burnett, Heather},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Failures of Gricean reasoning and the role of stereotypes
+		  in the production of gender marking in French},
+  volume	= {6},
+  year		= {2021}
+}
+
+@InCollection{	  gumiel-molina2021edad,
+  address	= {M{\'e}xico; Madrid},
+  author	= {Gumiel-Molina, Silvia and Moreno-Quib{\'e}n, Norberto and
+		  P{\'e}rez-Jim{\'e}nez, Isabel},
+  booktitle	= {Las palabras como unidades ling{\"u}{\'i}sticas},
+  editor	= {Hern{\'a}ndez, Esther and Mart{\'i}n Butrague{\~n}o, Pedro},
+  pages		= {219-244},
+  publisher	= {CISC-El Colegio de M{\'e}xico},
+  title		= {Variaici{\'o}n dialectal en las oraciones copulativas en
+		  espa{\~n}ol: los adjetivos de edad y tama{\~n}o},
+  year		= {2021}
+}
+
+@Article{	  gumieletal2020degree,
+  author	= {Gumiel-Molina, Silvia and Moreno-Quib{\'e}n, Norberto and
+		  P{\'e}rez-Jim{\'e}nez, Isabel},
+  journal	= {Borealis: An International Journal of Hispanic
+		  Linguistics},
+  number	= {1},
+  pages		= {69--86},
+  title		= {On degree minimizers in Spanish},
+  volume	= {9},
+  year		= {2020}
+}
+
 @PhDThesis{	  oltra-massuet1999theme,
   author	= {Oltra-Massuet, Isabel},
   title		= {On The Notion of Theme Vowel: A New Approach to Catalan
@@ -7231,8 +7266,8 @@
 		  and Moreno-Quib{\'e}n, Norberto},
   journal	= {Revista espa{\~n}ola de ling{\"u}{\'i}stica (RSEL)},
   number	= {1},
-  title		= {SER Y ESTAR EN LAS LENGUAS ROMANCES IB{\'E}RICAS: LAS
-		  ORACIONES COPULATIVAS CON ATRIBUTO ADJETIVAL},
+  title		= {Ser y estar en las lenguas romances ib{\'e}ricas: las
+		  oraciones copulativas con atributo adjetival},
   volume	= {48},
   year		= {2018}
 }
