--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,17 @@
+@Article{Lassiter2017Adjectival,
+author = {Lassiter, Daniel and Goodman, Noah D.}, 
+title = {Adjectival vagueness in a Bayesian model of interpretation}, 
+journal = {Synthese}, 
+volume = {194}, 
+number = {10}, 
+pages = {3801–3836}, 
+year = {2017}, 
+abstract = {}, 
+location = {}, 
+keywords = {Degree; Adjective; Sorites; Vagueness; Copula; Copulative}}
+
+
+
 @InBook{Gumiel-Molina2020Edad,
 author = {Gumiel-Molina, Silvia and Moreno-Quibén, Norberto and Pérez-Jiménez, Isabel}, 
 title = {Variaciación dialectal en las oraciones copulativas en español: los adjetivos de edad y tamaño}, 
