--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,34 @@
 
+@PhDThesis{	  ramir2020social,
+  address	= {Nijmegen},
+  author	= {Raviv, Limor},
+  school	= {Radboud University Nijmegen},
+  title		= {Language and society: How social pressures shape
+		  grammatical structure},
+  year		= {2020}
+}
+
+@PhDThesis{	  witteloostuijn2020,
+  address	= {Amsterdam},
+  author	= {van Witteloostuijn, Merel},
+  school	= {University of Amsterdam},
+  title		= {Examining the contribution of statistical learning to
+		  grammar and literacy acquisition. A study of Dutch children
+		  with and without dyslexia},
+  year		= {2020}
+}
+
+@Article{	  lassiter2017adjectival,
+  author	= {Lassiter, Daniel and Goodman, Noah D.},
+  journal	= {Synthese},
+  number	= {10},
+  pages		= {3801--3836},
+  title		= {Adjectival vagueness in a Bayesian model of
+		  interpretation},
+  volume	= {194},
+  year		= {2017}
+}
+
 @Article{	  pozniak2021gender,
   author	= {Pozniak, C{\'e}line and Burnett, Heather},
   journal	= {Glossa: a journal of general linguistics},
