--- a/copulative.bib
+++ b/copulative.bib
@@ -14,7 +14,7 @@ keywords = {Degree; Adjective; Sorites; Vagueness; Copula; Copulative}}
 
 @InBook{Gumiel-Molina2020Edad,
 author = {Gumiel-Molina, Silvia and Moreno-Quibén, Norberto and Pérez-Jiménez, Isabel}, 
-title = {Variaciación dialectal en las oraciones copulativas en español: los adjetivos de edad y tamaño}, 
+title = {Variación dialectal en las oraciones copulativas en español: los adjetivos de edad y tamaño}, 
 booktitle = {Las palabras como unidades lingüísticas}, 
 editor = {Hernández, Esther and Martín Butragueño, Pedro}, 
 publisher = {CISC-El Colegio de México}, 
