--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -47,7 +47,7 @@
   editor	= {Hern{\'a}ndez, Esther and Mart{\'i}n Butrague{\~n}o, Pedro},
   pages		= {219-244},
   publisher	= {CISC-El Colegio de M{\'e}xico},
-  title		= {Variaici{\'o}n dialectal en las oraciones copulativas en
+  title		= {Variaci{\'o}n dialectal en las oraciones copulativas en
 		  espa{\~n}ol: los adjetivos de edad y tama{\~n}o},
   year		= {2021}
 }
