--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Article{	  vostrikova2021exceptive,
+  author	= {Vostrikova, Ekaterina},
+  journal	= {Natural Language Semantics},
+  title		= {Conditional analysis of clausal exceptives},
+  year		= {2021}
+}
+
 @PhDThesis{	  ramir2020social,
   address	= {Nijmegen},
   author	= {Raviv, Limor},
