--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@PhDThesis{	  chen1996probabilistic,
+  author	= {Chen, Stanley F.},
+  school	= {Harvard University},
+  title		= {Building Probabilistic Models for Natural Language},
+  year		= {1996}
+}
+
 @Article{	  vostrikova2021exceptive,
   author	= {Vostrikova, Ekaterina},
   journal	= {Natural Language Semantics},
