--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,26 @@
 
+@Article{	  hanink2021washo,
+  author	= {Hanink, Emily A.},
+  journal	= {Natural Language \& Linguistic Theory},
+  number	= {2},
+  pages		= {505--554},
+  title		= {DP structure and internally headed relatives in Washo},
+  volume	= {39},
+  year		= {2021}
+}
+
+@Article{	  georgieva2021cluster,
+  author	= {Georgieva, Ekaterina and Salzmann, Martin and Weisser,
+		  Philipp},
+  journal	= {Natural Language \& Linguistic Theory},
+  number	= {2},
+  pages		= {457--503},
+  title		= {Negative verb clusters in Mari and Udmurt and why they
+		  require postsyntactic top-down word-formation},
+  volume	= {39},
+  year		= {2021}
+}
+
 @PhDThesis{	  chen1996probabilistic,
   author	= {Chen, Stanley F.},
   school	= {Harvard University},
