--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@Book{		  levin1993,
+  address	= {Chicago},
+  author	= {Levin, Beth},
+  publisher	= {Chicago University Press},
+  title		= {English verb classes and alternations: a preliminary
+		  investigation},
+  year		= {1993}
+}
+
+@Article{	  nowak2002,
+  author	= {Nowak, MA and Komarova, NL and Niyogi, P},
+  journal	= {Nature},
+  number	= {6889},
+  pages		= {611--617},
+  title		= {Computational and evolutionary aspects of language.},
+  volume	= {417},
+  year		= {2002}
+}
+
 @Article{	  hanink2021washo,
   author	= {Hanink, Emily A.},
   journal	= {Natural Language \& Linguistic Theory},
