--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Book{		  levin2005argument,
+  author	= {Levin, Beth and Hovav, Malka Rappaport},
+  pages		= {278},
+  publisher	= {Cambridge University Press},
+  title		= {Argument Realization},
+  year		= {2005}
+}
+
 @Book{		  levin1993,
   address	= {Chicago},
   author	= {Levin, Beth},
