--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Article{	  branan2021case,
+  author	= {Branan, Kenyon},
+  journal	= {Natural Language \& Linguistic Theory},
+  title		= {Licensing with Case. Evidence from Kikuyu},
+  year		= {2021}
+}
+
 @Book{		  levin2005argument,
   author	= {Levin, Beth and Hovav, Malka Rappaport},
   pages		= {278},
