--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -7657,7 +7657,8 @@
   journal	= {Linguistic Inquiry},
   number	= {3},
   pages		= {409--440},
-  title		= {Attraction at a {Distance}: {\=A}-{Movement} and {Case}},
+  title		= {Attraction at a {Distance}: {$\overline{X}$}-{Movement}
+		  and {Case}},
   volume	= {49},
   year		= {2018},
   doi		= {10.1162/ling_a_00278}
