--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,22 @@
 
+@InBook{	  kuroda1979style,
+  author	= {Kuroda, S.-Y.},
+  booktitle	= {The ‹whole› of the Doughnut},
+  pages		= {185-204},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {Where epsitemology, style, and grammar meet: a case study
+		  from Japanese},
+  year		= {1979}
+}
+
+@Book{		  kuroda1979whole,
+  author	= {Kuroda, S.-Y.},
+  pages		= {255},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {The whole of the Doughnut},
+  year		= {1979}
+}
+
 @Article{	  branan2021case,
   author	= {Branan, Kenyon},
   journal	= {Natural Language \& Linguistic Theory},
@@ -7657,7 +7675,7 @@
   journal	= {Linguistic Inquiry},
   number	= {3},
   pages		= {409--440},
-  title		= {Attraction at a {Distance}: {$\overline{X}$}-{Movement}
+  title		= {Attraction at a {Distance}: {$\overline{A}$}-{Movement}
 		  and {Case}},
   volume	= {49},
   year		= {2018},
