--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,137 @@
 
+@InCollection{	  singh2020matrix,
+  author	= {Singh, Raj},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  pages		= {1-42},
+  publisher	= {Wiley},
+  title		= {Matrix and Embedded Presuppositions},
+  year		= {2020}
+}
+
+@InCollection{	  jasinskaja2020rhetorical,
+  author	= {Jasinskaja, Katja and Karagjosova, Elena},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  pages		= {1-29},
+  publisher	= {Wiley},
+  title		= {Rhetorical Relations},
+  year		= {2020}
+}
+
+@InCollection{	  zimmermann2020intensionality,
+  author	= {Zimmermann, Thomas Ede},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  pages		= {1-37},
+  publisher	= {Wiley},
+  title		= {Representing Intensionality},
+  year		= {2020}
+}
+
+@InCollection{	  eckardt2020indirect,
+  author	= {Eckardt, Regine},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  pages		= {1-25},
+  publisher	= {Wiley},
+  title		= {The Parameters of Indirect Speech},
+  year		= {2020}
+}
+
+@InCollection{	  rapp2020decomposition,
+  author	= {Rapp, Irene and von Stechow, Arnim},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  pages		= {1-26},
+  publisher	= {Wiley},
+  title		= {Decomposition},
+  year		= {2020}
+}
+
+@InCollection{	  lechner2020comparative,
+  author	= {Lechner, Winfried},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  pages		= {1-39},
+  publisher	= {Wiley},
+  title		= {Clausal vs Phrasal Comparatives},
+  year		= {2020}
+}
+
+@InCollection{	  schlenker2020appositive,
+  author	= {Schlenker, Philippe},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  pages		= {1-33},
+  publisher	= {Wiley},
+  title		= {The Semantics and Pragmatics of Appositives},
+  year		= {2020}
+}
+
+@InCollection{	  fabricius-hansen2020rc,
+  author	= {Fabricius‐Hansen, Cathrine},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  pages		= {1-32},
+  publisher	= {Wiley},
+  title		= {(Non)Restrictive Nominal Modification},
+  year		= {2020}
+}
+
+@InCollection{	  hinterwimmer2020quanti,
+  author	= {Hinterwimmer, Stefan},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  pages		= {1-28},
+  publisher	= {Wiley},
+  title		= {Nominal vs Adverbial Quantification},
+  year		= {2020}
+}
+
+@InCollection{	  roberts2020modal,
+  author	= {Roberts, Craige},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  pages		= {1-36},
+  publisher	= {Wiley},
+  title		= {Modal Subordination},
+  year		= {2020}
+}
+
+@InCollection{	  filip2020aspect,
+  author	= {Filip, Hana},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  pages		= {1-61},
+  publisher	= {Wiley},
+  title		= {Lexical Aspect (Aktionsart)},
+  year		= {2020}
+}
+
+@InCollection{	  stojanovic2020indexicality,
+  author	= {Stojanovic, Isidora},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  pages		= {1-33},
+  publisher	= {Wiley},
+  title		= {Indexicality},
+  year		= {2020}
+}
+
+@InBook{	  kuroda1979style,
+  author	= {Kuroda, S.-Y.},
+  booktitle	= {The ‹whole› of the Doughnut},
+  pages		= {185-204},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {Where epsitemology, style, and grammar meet: a case study
+		  from Japanese},
+  year		= {1979}
+}
+
+@Book{		  kuroda1979whole,
+  author	= {Kuroda, S.-Y.},
+  pages		= {255},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {The whole of the Doughnut},
+  year		= {1979}
+}
+
+@Article{	  branan2021case,
+  author	= {Branan, Kenyon},
+  journal	= {Natural Language \& Linguistic Theory},
+  title		= {Licensing with Case. Evidence from Kikuyu},
+  year		= {2021}
+}
+
 @Book{		  levin2005argument,
   author	= {Levin, Beth and Hovav, Malka Rappaport},
   pages		= {278},
@@ -7650,7 +7783,8 @@
   journal	= {Linguistic Inquiry},
   number	= {3},
   pages		= {409--440},
-  title		= {Attraction at a {Distance}: {\=A}-{Movement} and {Case}},
+  title		= {Attraction at a {Distance}: {$\overline{A}$}-{Movement}
+		  and {Case}},
   volume	= {49},
   year		= {2018},
   doi		= {10.1162/ling_a_00278}
