--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,3 +1,14 @@
+
+@Book{		  himmelmann2005secondary,
+  address	= {Oxford; New York},
+  editor	= {Himmelmann, Nikolaus and Schultze-Berndt, Eva},
+  pages		= {448},
+  publisher	= {Oxford University Press},
+  title		= {Secondary predication and adverbial modification: the
+		  typology of depictives},
+  year		= {2005}
+}
+
 @InCollection{	  singh2020matrix,
   author	= {Singh, Raj},
   booktitle	= {The Wiley Blackwell Companion to Semantics},
