--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,16 @@
+@InBook{Schein1995SC,
+author = {Schein, Barry}, 
+title = {Small clauses and Predication}, 
+booktitle = {Small Clauses}, 
+editor = {Cardinaletti, Anna and Guasti, Maria Teresa}, 
+publisher = {Brill}, 
+address = {}, 
+pages = {49-76}, 
+year = {1995}, 
+abstract = {}, 
+keywords = {Small Clauses; Copula; Copulative; Predication}}
+
+
 @Article{Lassiter2017Adjectival,
 author = {Lassiter, Daniel and Goodman, Noah D.}, 
 title = {Adjectival vagueness in a Bayesian model of interpretation}, 
