--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,19 @@
 
+@Book{		  ludlow2011generative,
+  author	= {Ludlow, Peter},
+  pages		= {220},
+  publisher	= {Oxford University Press},
+  title		= {The Philosophy of Generative Linguistics},
+  year		= {2011}
+}
+
+@Book{		  chomsky2000horizons,
+  author	= {Chomsky, Noam},
+  pages		= {230},
+  title		= {New Horizons in the Study of Language and Mind},
+  year		= {2000}
+}
+
 @Book{		  himmelmann2005secondary,
   address	= {Oxford; New York},
   editor	= {Himmelmann, Nikolaus and Schultze-Berndt, Eva},
