result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,16 @@
+@InBook{Rett2020Equal,
+author = {Rett, Jessica}, 
+title = {Separate but Equal: A Typology of Equative Constructions}, 
+booktitle = {Interactions of Degree and Quantification}, 
+editor = {Hallman, Peter}, 
+publisher = {BRILL}, 
+address = {}, 
+pages = {163-204}, 
+year = {2020}, 
+abstract = {}, 
+keywords = {Degree; equation; equatives; copulative; copula}}
+
+
 @InBook{Schein1995SC,
 author = {Schein, Barry}, 
 title = {Small clauses and Predication}, 
