--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,72 @@
 
+@InBook{	  bogal-allbritten2020degree,
+  author	= {Bogal-Allbritten, Elizabeth and Coppock, Elizabeth},
+  booktitle	= {Interactions of Degree and Quantification},
+  editor	= {Hallman, Peter},
+  pages		= {121-162},
+  publisher	= {BRILL},
+  title		= {Quantification, Degrees, and Beyond in Navajo},
+  year		= {2020}
+}
+
+@InBook{	  rett2020equal,
+  author	= {Rett, Jessica},
+  booktitle	= {Interactions of Degree and Quantification},
+  editor	= {Hallman, Peter},
+  pages		= {163-204},
+  publisher	= {BRILL},
+  title		= {Separate but Equal: A Typology of Equative Constructions},
+  year		= {2020}
+}
+
+@InBook{	  homer2020cardinal,
+  author	= {Homer, Vincent and Bhatt, Rajesh},
+  booktitle	= {Interactions of Degree and Quantification},
+  editor	= {Hallman, Peter},
+  pages		= {271-303},
+  publisher	= {BRILL},
+  title		= {Measuring Cardinalities: Evidence from Differential
+		  Comparatives in French},
+  year		= {2020}
+}
+
+@InBook{	  fleisher2020than,
+  author	= {Fleisher, Nicholas},
+  booktitle	= {Interactions of Degree and Quantification},
+  editor	= {Hallman, Peter},
+  pages		= {364-381},
+  publisher	= {BRILL},
+  title		= {Nominal Quantifiers in Than Clauses and Degree Questions},
+  year		= {2020}
+}
+
+@InBook{	  sep-possible-worlds,
+  author	= {Menzel, Christopher},
+  booktitle	= {The Stanford Encyclopedia of Philosophy},
+  editor	= {Edward, N. Zalta},
+  publisher	= {Metaphysics Research Lab, Stanford University},
+  title		= {Possible Worlds},
+  year		= {2017}
+}
+
+@InBook{	  sep-possible-objects,
+  author	= {Yagisawa, Takashi},
+  booktitle	= {The Stanford Encyclopedia of Philosophy},
+  editor	= {Edward, N. Zalta},
+  publisher	= {Metaphysics Research Lab, Stanford University},
+  title		= {Possible Objects},
+  year		= {2020}
+}
+
+@InBook{	  sep-essential-accidental,
+  author	= {Robertson Ishi, Teresa and Atkins, Philip},
+  booktitle	= {The Stanford Encyclopedia of Philosophy},
+  editor	= {Edward, N. Zalta},
+  publisher	= {Metaphysics Research Lab, Stanford University},
+  title		= {Essential vs. Accidental Properties},
+  year		= {2020}
+}
+
 @Book{		  ludlow2011generative,
   author	= {Ludlow, Peter},
   pages		= {220},
