--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,47 @@
 
+@Article{	  gracia2008existential,
+  author	= {Gr{\`a}cia, Llu{\"\i}sa and Crous, Berta and Gargante,
+		  Laura},
+  journal	= {Revista de la Sociedad Espa{\~n}ola de Ling{\"u}{\'i}stica},
+  number	= {2},
+  pages		= {47--74},
+  title		= {Diferencias tipol{\'o}gicas y adquisici{\'o}n de segundas
+		  lenguas II: las construcciones atributivas, locativas y
+		  posesivas},
+  volume	= {38},
+  year		= {2008}
+}
+
+@Article{	  freeze1992existential,
+  author	= {Freeze, Ray},
+  journal	= {Language},
+  number	= {3},
+  pages		= {553--595},
+  title		= {Existentials and Other Locatives},
+  volume	= {68},
+  year		= {1992}
+}
+
+@Article{	  hernandez2003haber,
+  author	= {Hern{\'a}ndez D{\'i}az, Alex},
+  journal	= {Medievalia},
+  pages		= {135--154},
+  title		= {La sem{\'a}ntica locativa de las construcciones
+		  existenciales con haber. Un ejemplo de
+		  gramaticalizaci{\'o}n},
+  volume	= {35},
+  year		= {2003}
+}
+
+@Article{	  kuno1971existential,
+  author	= {Kuno, Susumu},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  title		= {The Position of Locatives in Existential Sentences},
+  volume	= {2},
+  year		= {1971}
+}
+
 @InBook{	  bogal-allbritten2020degree,
   author	= {Bogal-Allbritten, Elizabeth and Coppock, Elizabeth},
   booktitle	= {Interactions of Degree and Quantification},
