result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,31 @@
+@InBook{Dobrovie-Sorin2012Existential,
+author = {Dobrovie-Sorin, Carmen and Beyssade, Claire}, 
+title = {Existential Sentences}, 
+booktitle = {Redefining Indefinites}, 
+editor = {}, 
+publisher = {Springer Netherlands}, 
+address = {Dordrecht}, 
+pages = {95-126}, 
+year = {2012}, 
+abstract = {}, 
+keywords = {Existence; Existential sentences; copulatives}}
+
+
+
+@Article{McNally1998Existential,
+author = {McNally, Louise}, 
+title = {Existential sentences without existential quantification}, 
+journal = {Linguistics and Philosophy}, 
+volume = {21}, 
+number = {4}, 
+pages = {353–392}, 
+year = {1998}, 
+abstract = {}, 
+location = {}, 
+keywords = {Existence; Existential sentences; copulatives}}
+
+
+
 @InBook{Rett2020Equal,
 author = {Rett, Jessica}, 
 title = {Separate but Equal: A Typology of Equative Constructions}, 
