result-reduced copulative

--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,35 @@
 
+@InBook{	  dobrovie-sorin2012indefinite,
+  address	= {Dordrecht},
+  author	= {Dobrovie-Sorin, Carmen and Beyssade, Claire},
+  booktitle	= {Redefining Indefinites},
+  pages		= {127-141},
+  publisher	= {Springer Netherlands},
+  title		= {The Ambiguity of Indefinites: Towards a Denotational
+		  Definition of the Weak/Strong Distinction},
+  year		= {2012}
+}
+
+@InBook{	  dobrovie-sorin2012,
+  address	= {Dordrecht},
+  author	= {Dobrovie-Sorin, Carmen and Beyssade, Claire},
+  booktitle	= {Redefining Indefinites},
+  pages		= {95-126},
+  publisher	= {Springer Netherlands},
+  title		= {Existential Sentences},
+  year		= {2012}
+}
+
+@Article{	  mcnally1998existential,
+  author	= {McNally, Louise},
+  journal	= {Linguistics and Philosophy},
+  number	= {4},
+  pages		= {353--392},
+  title		= {Existential sentences without existential quantification},
+  volume	= {21},
+  year		= {1998}
+}
+
 @Article{	  gracia2008existential,
   author	= {Gr{\`a}cia, Llu{\"\i}sa and Crous, Berta and Gargante,
 		  Laura},
