--- a/curso-2019.bib
+++ b/curso-2019.bib
@@ -1,3 +1,43 @@
+@InBook{Villa-Garcia2021La-linguistica,
+author = {Villa-García, Julio and Sánchez-Llana, Hugo}, 
+title = {La lingüística formal y la clase de L2: en pos de aunar teoría y práctica}, 
+booktitle = {Actas de las XI Jornadas Didácticas de ELE}, 
+editor = {}, 
+publisher = {Departamento de Comunicación Digital, Instituto Cervantes}, 
+address = {Spain}, 
+pages = {}, 
+year = {2021}, 
+abstract = {}, 
+keywords = {curso-lengua; educación; }}
+
+
+@InBook{Mateu2016SV,
+author = {Mateu, Jaume}, 
+title = {Sintagma Verbal}, 
+booktitle = {Enciclopedia de Lingüística Hispánica}, 
+editor = {Gutiérrez-Rexach, Javier}, 
+publisher = {Routledge}, 
+address = {}, 
+pages = {809-820}, 
+year = {2016}, 
+abstract = {}, 
+keywords = {Predication; curso-lengua; curso-sintaxis}}
+
+
+
+@InBook{Rivera2016Predication,
+author = {González Rivera, Melvin}, 
+title = {Predicación}, 
+booktitle = {Enciclopedia de Lingüística Hispánica}, 
+editor = {Gutiérrez-Rexach, Javier}, 
+publisher = {Routledge}, 
+address = {}, 
+pages = {809-820}, 
+year = {2016}, 
+abstract = {}, 
+keywords = {Predication; curso-lengua; curso-sintaxis}}
+
+
 @Book{Cabeza2020Signos,
 author = {Cabeza Pereiro, María del Carmen}, 
 title = {Fundamentos de las lenguas de signos}, 
@@ -757,17 +797,6 @@ year = {2013},
 abstract = {}, 
 keywords = {curso-lengua; Morphology; }}
 
-@InBook{Villa-Garcia2018La-linguistica,
-author = {Villa-García, Julio and Sánchez-Llana, Hugo}, 
-title = {La lingüística formal y la clase de L2: en pos de aunar teoría y práctica}, 
-booktitle = {Actas de las XI Jornadas Didácticas de ELE}, 
-editor = {}, 
-publisher = {Departamento de Comunicación Digital, Instituto Cervantes}, 
-address = {Spain}, 
-pages = {}, 
-year = {2018}, 
-abstract = {}, 
-keywords = {curso-lengua; educación; }}
 
 @Book{Munoz-Basols2018Guia,
 author = {Muñoz-Basols, Javier and Lacorte, Manel}, 
